Add files to VS project

--- a/Waves.csproj
+++ b/Waves.csproj
@@ -25,6 +25,8 @@
     <Content Include="app.css" />
     <Content Include="index.html" />
     <Content Include="phaser\phaser.js" />
+    <Content Include="src\MainGame.js" />
+    <Content Include="src\model\gameState.js" />
     <Content Include="web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -35,8 +37,12 @@
     <TypeScriptCompile Include="phaser\p2.d.ts" />
     <TypeScriptCompile Include="phaser\phaser.d.ts" />
     <TypeScriptCompile Include="phaser\pixi.d.ts" />
+    <TypeScriptCompile Include="src\MainGame.ts" />
+    <TypeScriptCompile Include="src\model\gameState.ts" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="src\MainGame.js.map" />
+    <Content Include="src\model\gameState.js.map" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
