--- a/Waves.csproj
+++ b/Waves.csproj
@@ -38,6 +38,7 @@
     <TypeScriptCompile Include="phaser\phaser.d.ts" />
     <TypeScriptCompile Include="phaser\pixi.d.ts" />
     <TypeScriptCompile Include="src\Button.ts" />
+    <TypeScriptCompile Include="src\InventoryItem.ts" />
     <TypeScriptCompile Include="src\model\Model.ts" />
     <TypeScriptCompile Include="src\model\InventoryState.ts" />
     <TypeScriptCompile Include="src\model\ResourceState.ts" />
