--- a/Waves.csproj
+++ b/Waves.csproj
@@ -47,6 +47,7 @@
     <TypeScriptCompile Include="src\Boot.ts" />
     <TypeScriptCompile Include="src\MainGame.ts" />
     <TypeScriptCompile Include="src\Preloader.ts" />
+    <TypeScriptCompile Include="src\Sea.ts" />
   </ItemGroup>
   <ItemGroup>
     <None Include="web.Debug.config">
