--- a/Waves.csproj
+++ b/Waves.csproj
@@ -39,6 +39,7 @@
     <TypeScriptCompile Include="phaser\pixi.d.ts" />
     <TypeScriptCompile Include="src\Boat.ts" />
     <TypeScriptCompile Include="src\Button.ts" />
+    <TypeScriptCompile Include="src\Inventory.ts" />
     <TypeScriptCompile Include="src\InventoryItem.ts" />
     <TypeScriptCompile Include="src\model\StoryEvent.ts" />
     <TypeScriptCompile Include="src\model\Model.ts" />
