--- a/Waves.csproj
+++ b/Waves.csproj
@@ -28,6 +28,7 @@
     <Content Include="phaser\phaser.js" />
     <Content Include="src\MainGame.js" />
     <Content Include="src\model\gameState.js" />
+    <Content Include="src\Todo.txt" />
     <Content Include="web.config">
       <SubType>Designer</SubType>
     </Content>
